fix: buttons glitching tiled windows behind them
There seems to be an issue with change on hover/focus transparency with
either GTK4, Hyprland or Astal. This only happens when the transparency
value changes based an event. Handle this with lightness change instead

--- a/matugen/templates/ags.scss
+++ b/matugen/templates/ags.scss
@@ -75,10 +75,6 @@ $ramProc: color.mix($primary_fixed_dim, $on_primary_fixed_variant, 66%);
 $cpuProc: color.mix($tertiary_fixed_dim, $on_tertiary_fixed_variant, 66%);
 $procBg: $surface_dim;
 
-/* theme mode and scheme variables */
-$darkmode: true;
-$material-color-scheme: "scheme-vibrant";
-
 /* numeric variables */
 $round: 8px;
 $round2: 16px;
