--- a/style/abstracts/_mixins.scss
+++ b/style/abstracts/_mixins.scss
@@ -63,7 +63,14 @@
 
   &:hover,
   &:focus {
-    background: $buttonDisabledHover;
+    /* would prefer to handle this with transparency, 
+    but that currently glitches on Hyprland */
+    @if $darkmode {
+      background: color.adjust($buttonDisabled, $lightness: +20%);
+    }
+    @else {
+      background: color.adjust($buttonDisabled, $lightness: -10%);
+    }
   }
 }
 
