--- a/style/abstracts/_variables.scss
+++ b/style/abstracts/_variables.scss
@@ -1,116 +1,127 @@
 @use "sass:color";
+
 /*
 * Css Colors
 * Generated with Matugen
 */
 
 
-$background: rgba(30, 16, 12, 1.0);
+$background: rgba(18, 19, 20, 1.0);
 
 $error: rgba(255, 180, 171, 1.0);
 
 $error_container: rgba(147, 0, 10, 1.0);
 
-$inverse_on_surface: rgba(61, 44, 39, 1.0);
+$inverse_on_surface: rgba(48, 48, 49, 1.0);
 
-$inverse_primary: rgba(174, 50, 0, 1.0);
+$inverse_primary: rgba(82, 97, 103, 1.0);
 
-$inverse_surface: rgba(249, 220, 212, 1.0);
+$inverse_surface: rgba(227, 226, 226, 1.0);
 
-$on_background: rgba(249, 220, 212, 1.0);
+$on_background: rgba(227, 226, 226, 1.0);
 
 $on_error: rgba(105, 0, 5, 1.0);
 
 $on_error_container: rgba(255, 218, 214, 1.0);
 
-$on_primary: rgba(94, 23, 0, 1.0);
+$on_primary: rgba(36, 50, 56, 1.0);
 
-$on_primary_container: rgba(255, 219, 208, 1.0);
+$on_primary_container: rgba(214, 229, 237, 1.0);
 
-$on_primary_fixed: rgba(58, 11, 0, 1.0);
+$on_primary_fixed: rgba(15, 29, 35, 1.0);
 
-$on_primary_fixed_variant: rgba(133, 36, 0, 1.0);
+$on_primary_fixed_variant: rgba(59, 73, 79, 1.0);
 
-$on_secondary: rgba(73, 40, 15, 1.0);
+$on_secondary: rgba(42, 50, 53, 1.0);
 
-$on_secondary_container: rgba(255, 220, 198, 1.0);
+$on_secondary_container: rgba(220, 228, 232, 1.0);
 
-$on_secondary_fixed: rgba(48, 20, 1, 1.0);
+$on_secondary_fixed: rgba(21, 29, 32, 1.0);
 
-$on_secondary_fixed_variant: rgba(99, 62, 35, 1.0);
+$on_secondary_fixed_variant: rgba(64, 72, 76, 1.0);
 
-$on_surface: rgba(249, 220, 212, 1.0);
+$on_surface: rgba(227, 226, 226, 1.0);
 
-$on_surface_variant: rgba(220, 193, 185, 1.0);
+$on_surface_variant: rgba(199, 198, 199, 1.0);
 
-$on_tertiary: rgba(71, 42, 0, 1.0);
+$on_tertiary: rgba(30, 51, 60, 1.0);
 
-$on_tertiary_container: rgba(255, 221, 183, 1.0);
+$on_tertiary_container: rgba(207, 230, 241, 1.0);
 
-$on_tertiary_fixed: rgba(42, 23, 0, 1.0);
+$on_tertiary_fixed: rgba(7, 30, 38, 1.0);
 
-$on_tertiary_fixed_variant: rgba(100, 63, 7, 1.0);
+$on_tertiary_fixed_variant: rgba(53, 74, 83, 1.0);
 
-$outline: rgba(163, 139, 133, 1.0);
+$outline: rgba(145, 144, 145, 1.0);
 
-$outline_variant: rgba(85, 66, 61, 1.0);
+$outline_variant: rgba(70, 71, 71, 1.0);
 
-$primary: rgba(255, 181, 158, 1.0);
+$primary: rgba(186, 201, 208, 1.0);
 
-$primary_container: rgba(133, 36, 0, 1.0);
+$primary_container: rgba(59, 73, 79, 1.0);
 
-$primary_fixed: rgba(255, 219, 208, 1.0);
+$primary_fixed: rgba(214, 229, 237, 1.0);
 
-$primary_fixed_dim: rgba(255, 181, 158, 1.0);
+$primary_fixed_dim: rgba(186, 201, 208, 1.0);
 
 $scrim: rgba(0, 0, 0, 1.0);
 
-$secondary: rgba(241, 187, 152, 1.0);
+$secondary: rgba(191, 200, 204, 1.0);
 
-$secondary_container: rgba(99, 62, 35, 1.0);
+$secondary_container: rgba(64, 72, 76, 1.0);
 
-$secondary_fixed: rgba(255, 220, 198, 1.0);
+$secondary_fixed: rgba(220, 228, 232, 1.0);
 
-$secondary_fixed_dim: rgba(241, 187, 152, 1.0);
+$secondary_fixed_dim: rgba(191, 200, 204, 1.0);
 
 $shadow: rgba(0, 0, 0, 1.0);
 
-$source_color: rgba(204, 76, 32, 1.0);
+$source_color: rgba(28, 40, 45, 1.0);
 
-$surface: rgba(30, 16, 12, 1.0);
+$surface: rgba(18, 19, 20, 1.0);
 
-$surface_bright: rgba(71, 53, 48, 1.0);
+$surface_bright: rgba(56, 57, 58, 1.0);
 
-$surface_container: rgba(43, 28, 23, 1.0);
+$surface_container: rgba(31, 32, 32, 1.0);
 
-$surface_container_high: rgba(54, 38, 33, 1.0);
+$surface_container_high: rgba(41, 42, 43, 1.0);
 
-$surface_container_highest: rgba(66, 49, 44, 1.0);
+$surface_container_highest: rgba(52, 53, 53, 1.0);
 
-$surface_container_low: rgba(39, 24, 19, 1.0);
+$surface_container_low: rgba(27, 28, 28, 1.0);
 
-$surface_container_lowest: rgba(24, 11, 7, 1.0);
+$surface_container_lowest: rgba(13, 14, 15, 1.0);
 
-$surface_dim: rgba(30, 16, 12, 1.0);
+$surface_dim: rgba(18, 19, 20, 1.0);
 
-$surface_tint: rgba(255, 181, 158, 1.0);
+$surface_tint: rgba(186, 201, 208, 1.0);
 
-$surface_variant: rgba(85, 66, 61, 1.0);
+$surface_variant: rgba(70, 71, 71, 1.0);
 
-$tertiary: rgba(243, 189, 123, 1.0);
+$tertiary: rgba(179, 202, 213, 1.0);
 
-$tertiary_container: rgba(100, 63, 7, 1.0);
+$tertiary_container: rgba(53, 74, 83, 1.0);
 
-$tertiary_fixed: rgba(255, 221, 183, 1.0);
+$tertiary_fixed: rgba(207, 230, 241, 1.0);
 
-$tertiary_fixed_dim: rgba(243, 189, 123, 1.0);
+$tertiary_fixed_dim: rgba(179, 202, 213, 1.0);
 
 
+/* general color variables */
 $red: #d17678;
 $accent_green: #afbea2;
+$tooltipBg: $background;
+$fg: $on_background;
+$bg: color.adjust($background, $alpha: -0.5);
+$barBg: color.adjust($background, $alpha: -0.5);
+$surface: color.adjust($surface_bright, $alpha: -0.6);
+$overlay: color.adjust($on_surface, $alpha: -0.25);
+$accent: $tertiary_container;
 
+/* os icon colors */
 $os: $on_surface_variant;
 
+/* workspaces colors */
 $primaryMon: color.mix(
   $primary_container,
   $on_primary_container,
@@ -150,36 +161,19 @@ $tertiaryMonHover: color.mix(
 $fourthMon: color.mix($secondary, $on_secondary, 70%, $method: rgb);
 $fourthMonHover: color.mix($secondary, $on_secondary, 45%, $method: rgb);
 
-$tooltipBg: $background;
-$fg: $on_background;
-$bg: color.adjust($background, $alpha: -0.5);
-$barBg: color.adjust($background, $alpha: -0.5);
-
-$surface: color.adjust($surface_bright, $alpha: -0.6);
-$overlay: color.adjust($on_surface, $alpha: -0.25);
-
-$accent: $tertiary_container;
-
-/* buttons */
+/* button colors */
 $buttonEnabled: $accent;
 $buttonEnabledHover: color.adjust($buttonEnabled, $lightness: -15%);
 
 $buttonDisabled: $surface;
 $buttonDisabledHover: color.adjust($buttonDisabled, $alpha: +0.8);
 
-/* hw circular proc */
+/* hw circular proc colors */
 $ramProc: color.mix($primary_fixed_dim, $on_primary_fixed_variant, 66%);
 $cpuProc: color.mix($tertiary_fixed_dim, $on_tertiary_fixed_variant, 66%);
 $procBg: $surface_dim;
 
-/* Theme mode and scheme variables */
-$darkmode: true;
-$material-color-scheme: "scheme-vibrant";
-
-/* Theme mode and scheme variables */
-$darkmode: true;
-$material-color-scheme: "scheme-neutral";
-
+/* numeric variables */
 $round: 8px;
 $round2: 16px;
 $margin: 0.4rem;
@@ -187,3 +181,7 @@ $padding: 0.4rem;
 $border-width: 2px;
 $scale: 0.5rem;
 $font: 1.1rem;
+
+/* Theme mode and scheme variables */
+$darkmode: true;
+$material-color-scheme: "scheme-neutral";
